force-app/main/default/objects/animalos__Animal_Note__c/animalos__Animal_Note__c.object-meta.xml
<CustomObject>
    <label>Animal Note</label>
    <nameField>
        <displayFormat>AN{00000}</displayFormat>
        <label>Animal Note ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>