force-app/main/default/objects/animalos__Animal_Note__c/fields/animalos__Block__c.field-meta.xml
<CustomField>
    <fullName>animalos__Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Block</label>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Animal Notes</relationshipLabel>
    <relationshipName>Animal_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>