force-app/main/default/objects/animalos__Animal_Note__c/fields/animalos__Content__c.field-meta.xml
<CustomField>
    <fullName>animalos__Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>