force-app/main/default/objects/animalos__Animal_Note__c/fields/animalos__Flag__c.field-meta.xml
<CustomField>
    <fullName>animalos__Flag__c</fullName>
    <label>Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>