force-app/main/default/objects/animalos__Animal_Note__c/fields/animalos__Flag_Icon__c.field-meta.xml
<CustomField>
    <fullName>animalos__Flag_Icon__c</fullName>
    <formula>IF( ISPICKVAL( animalos__Flag__c , &apos;Information&apos;) , IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__Note_Flags/Information.png&quot;, &apos;Information&apos;, 25, 25),
IF( ISPICKVAL( animalos__Flag__c , &apos;Warning&apos;) , IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__Note_Flags/Warning.png&quot;, &apos;Warning&apos;, 25, 25),
IF( ISPICKVAL( animalos__Flag__c , &apos;Critical&apos;), IMAGE(LEFT($Api.Partner_Server_URL_620, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_620)) + &quot;resource/animalos__Note_Flags/Critical.png&quot;, &apos;Critical&apos;, 25, 25), &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag Icon</label>
    <type>Text</type>
</CustomField>