force-app/main/default/objects/animalos__Animal_Note__c/fields/animalos__Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animal Care</fullName>
            </value>
            <value>
                <fullName>Behaviour Rehabilitation and Training</fullName>
            </value>
            <value>
                <fullName>Behaviour General</fullName>
            </value>
            <value>
                <fullName>Behaviour Post Adoption</fullName>
            </value>
            <value>
                <fullName>Block/Row</fullName>
            </value>
            <value>
                <fullName>Veterinary</fullName>
            </value>
            <value>
                <fullName>Foster Care</fullName>
            </value>
            <value>
                <fullName>Inspectorate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>