force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Block_18_digit_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Block_18_digit_ID__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>animalos__Block__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block 18-digit ID</label>
    <type>Text</type>
</CustomField>