force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Created_By_Text__c.field-meta.xml
<CustomField>
    <fullName>aos_Created_By_Text__c</fullName>
    <label>Created By Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>