force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Formatted_Interaction_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>aos_Formatted_Interaction_Date_Time__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>IF(ISNULL(animalos__Interaction_Date_Time__c), &apos;&apos;, LEFT(TEXT(animalos__Interaction_Date_Time__c), 19))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Interaction Date/Time</label>
    <type>Text</type>
</CustomField>