force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Frequency__c.field-meta.xml
<CustomField>
    <fullName>aos_Frequency__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Frequency</label>
    <type>TextArea</type>
</CustomField>