force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Interaction_Date__c</fullName>
    <formula>DATEVALUE(animalos__Interaction_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Date</label>
    <type>Date</type>
</CustomField>