force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Keep__c.field-meta.xml
<CustomField>
    <fullName>aos_Keep__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Keep</label>
    <type>Checkbox</type>
</CustomField>