force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Other__c.field-meta.xml
<CustomField>
    <fullName>aos_Other__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>