force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Plan_progress_summary__c.field-meta.xml
<CustomField>
    <fullName>aos_Plan_progress_summary__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Plan progress summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>