force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Related_Animal_Note__c.field-meta.xml
<CustomField>
    <fullName>aos_Related_Animal_Note__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Animal Note</label>
    <referenceTo>animalos__Animal_Note__c</referenceTo>
    <relationshipLabel>Animal Notes</relationshipLabel>
    <relationshipName>aos_Animal_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>