force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Remove__c.field-meta.xml
<CustomField>
    <fullName>aos_Remove__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <defaultValue>false</defaultValue>
    <label>Remove</label>
    <type>Checkbox</type>
</CustomField>