force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_Triggers_identified__c.field-meta.xml
<CustomField>
    <fullName>aos_Triggers_identified__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Triggers identified</label>
    <type>TextArea</type>
</CustomField>