force-app/main/default/objects/animalos__Animal_Note__c/fields/aos_X18_digit_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_X18_digit_ID__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18-digit ID</label>
    <type>Text</type>
</CustomField>