force-app/main/default/objects/animalos__Animal_Note__c/recordTypes/animalos__Animal_Note.recordType-meta.xml
<RecordType>
    <fullName>animalos__Animal_Note</fullName>
    <active>true</active>
    <label>Animal Note</label>
</RecordType>