force-app/main/default/objects/animalos__Animal_Note__c/recordTypes/animalos__Block_Note.recordType-meta.xml
<RecordType>
    <fullName>animalos__Block_Note</fullName>
    <active>true</active>
    <label>Block Note</label>
</RecordType>