force-app/main/default/objects/animalos__Animal_Note__c/recordTypes/aos_BRT_Note.recordType-meta.xml
<RecordType>
    <fullName>aos_BRT_Note</fullName>
    <active>true</active>
    <description>Behaviour Rehabilitation and Training</description>
    <label>BRT Note</label>
</RecordType>